--- a/templates/recognitions/admin/recognition_dashboard_admin.html
+++ b/templates/recognitions/admin/recognition_dashboard_admin.html
@@ -34,6 +34,10 @@
              value="{{ q }}"
              class="form-control"
              placeholder="🔍 Buscar por categoría de comunicado">
+      
+      {% comment %} <a href="{% url 'administrar_grupos' %}" class="btn btn-warning text-white">
+        <i class="fa fa-users"></i> Grupos
+      </a> {% endcomment %}
     </div>
   </form>
 
