--- a/templates/recognitions/admin/recognition_dashboard_admin.html
+++ b/templates/recognitions/admin/recognition_dashboard_admin.html
@@ -199,6 +199,31 @@
             </div>
           </div>
         </div>
+        
+        {% comment %} <div class="mb-4">
+          <label class="form-label fw-bold">¿Quiénes pueden ver este comunicado?</label>
+          <div class="form-text mb-2">Selecciona los grupos que tendrán acceso. Si seleccionas 'Todos', los demás se ignoran.</div>
+          
+          <div class="card p-3 bg-light">
+            <div class="form-check mb-2">
+              <input class="form-check-input" type="checkbox" name="target_groups" id="group_all" value="todos">
+              <label class="form-check-label fw-bold" for="group_all">Todos (Público)</label>
+            </div>
+            <hr class="my-2">
+            <div class="form-check">
+              <input class="form-check-input group-checkbox" type="checkbox" name="target_groups" id="group_corpo" value="Corporativo">
+              <label class="form-check-label" for="group_corpo">Corporativo</label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input group-checkbox" type="checkbox" name="target_groups" id="group_estaciones" value="Estaciones">
+              <label class="form-check-label" for="group_estaciones">Estaciones</label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input group-checkbox" type="checkbox" name="target_groups" id="group_juarez" value="Estaciones Juárez">
+              <label class="form-check-label" for="group_juarez">Estaciones Juárez</label>
+            </div>
+          </div>
+        </div> {% endcomment %}
 
         <div class="mb-1">
           <label class="form-label">Sube imágenes (Opcional)</label>
