--- a/templates/layouts/sidebar.html
+++ b/templates/layouts/sidebar.html
@@ -304,7 +304,7 @@
                 </li>
             {% endif %}
 
-            {% if perms.tools.Modulo_herramientas %}
+            {% if not user.is_staff or perms.tools.Modulo_herramientas %}
                 <li class="sidebar-item {% if 'calculator' in request.resolver_match.url_name %}active{% endif %}">
                     <a class="sidebar-link d-flex justify-content-between align-items-center {% if 'calculator' not in request.resolver_match.url_name %}collapsed{% endif %}"
                        data-bs-toggle="collapse" 
