ya se ven las respuestas de las encuestas

--- a/templates/recognitions/admin/recognition_dashboard_admin.html
+++ b/templates/recognitions/admin/recognition_dashboard_admin.html
@@ -35,9 +35,9 @@
              class="form-control"
              placeholder="🔍 Buscar por categoría de comunicado">
       
-      {% comment %} <a href="{% url 'administrar_grupos' %}" class="btn btn-warning text-white">
+      <a href="{% url 'administrar_grupos' %}" class="btn btn-warning text-white">
         <i class="fa fa-users"></i> Grupos
-      </a> {% endcomment %}
+      </a> 
     </div>
   </form>
 
@@ -200,7 +200,7 @@
           </div>
         </div>
         
-        {% comment %} <div class="mb-4">
+        <div class="mb-4">
           <label class="form-label fw-bold">¿Quiénes pueden ver este comunicado?</label>
           <div class="form-text mb-2">Selecciona los grupos que tendrán acceso. Si seleccionas 'Todos', los demás se ignoran.</div>
           
@@ -223,7 +223,7 @@
               <label class="form-check-label" for="group_juarez">Estaciones Juárez</label>
             </div>
           </div>
-        </div> {% endcomment %}
+        </div> 
 
         <div class="mb-1">
           <label class="form-label">Sube imágenes (Opcional)</label>
