--- a/templates/recognitions/admin/recognition_dashboard_admin.html
+++ b/templates/recognitions/admin/recognition_dashboard_admin.html
@@ -128,8 +128,8 @@
           
           <div class="d-flex align-items-center gap-3">
               <div class="form-check form-switch mb-0">
-                  <input class="form-check-input" type="checkbox" role="switch" id="switchEstadoComunicado">
-                  <label class="form-check-label small text-muted" for="switchEstadoComunicado">Prioritario</label>
+                  <input class="form-check-input" type="checkbox" name="is_priority" role="switch" id="switchEstadoComunicado">
+                  <label class="form-check-label small text-muted" for="switchEstadoComunicado">Importante</label>
               </div>
 
               <button type="button" class="btn-close ms-0" data-bs-dismiss="modal" aria-label="Cerrar"></button>
