--- a/templates/tools/user/calculator_user.html
+++ b/templates/tools/user/calculator_user.html
@@ -32,7 +32,7 @@
             <div class="form-text">
               El monto máximo de préstamo es de:
               <strong class="text-body js-max-prestamo" id="max_prestamo">$0</strong>
-              que equivale al <span id="porcentaje">50%</span>
+              que equivale aproximadamente al <span id="porcentaje">50%</span>
             </div>
           </div>
 
