--- a/templates/authapp/home_user.html
+++ b/templates/authapp/home_user.html
@@ -80,30 +80,26 @@
 
 </div>
 
-<div class="modal fade" id="modalPrioridad" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-  aria-hidden="true">
-  <div class="modal-dialog modal-xl modal-dialog-centered">
-    <div class="modal-content border-0 shadow-lg">
-      <div id="prioridadHeader" class="modal-header text-white py-1">
-        <h5 class="modal-title small" style="font-size: 0.85rem;">📢 COMUNICADO IMPORTANTE</h5>
-      </div>
-      <div class="modal-body p-0">
-        <div id="prioridadImageContainer" class="text-center">
-          <img id="prioridadImg" src="" alt="Comunicado" class="img-fluid"
-            style="max-height: 70vh; width: 100%; object-fit: contain; display: block;">
+<div class="modal fade" id="modalPrioridad" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-auto-width"> 
+        <div class="modal-content border-0 shadow-lg" style="width: fit-content; margin: auto;">
+            <div id="prioridadHeader" class="modal-header text-white py-1">
+                <h5 class="modal-title small" style="font-size: 0.85rem;">📢 COMUNICADO IMPORTANTE</h5>
+            </div>
+            <div class="modal-body p-0">
+                <div id="prioridadImageContainer" class="text-center">
+                    <img id="prioridadImg" src="" alt="Comunicado" class="img-fluid" 
+                         style="max-height: 80vh; width: auto; display: block; margin: auto;">
+                </div>
+                <div id="prioridadMessage" class="fs-6 fw-medium text-dark text-center py-2 px-3 d-none"></div>
+            </div>
+            <div class="modal-footer border-0 pb-3 pt-0 justify-content-center"> 
+                <button type="button" id="btnAceptarPrioridad" class="btn btn-primary btn-sm px-4 py-1 w-auto" style="font-size: 0.9rem;">
+                    He leído y acepto
+                </button>
+            </div>
         </div>
-
-        <div id="prioridadMessage" class="fs-6 fw-medium text-dark text-center py-2 px-3 d-none">
-        </div>
-      </div>
-      <div class="modal-footer border-0 pb-3 pt-0 justify-content-center">
-        <button type="button" id="btnAceptarPrioridad" class="btn btn-primary btn-sm px-4 py-1 w-auto"
-          style="font-size: 0.9rem;">
-          He leído y acepto
-        </button>
-      </div>
     </div>
-  </div>
 </div>
 
 <button class="social-feed-btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSocial"
